--- a/tools/abigen/eosio-abigen.cpp.in
+++ b/tools/abigen/eosio-abigen.cpp.in
@@ -603,7 +603,7 @@ int main(int argc, const char **argv) {
    finder.addMatcher(record_decl_matcher, &eosio_record_matcher);
    finder.addMatcher(class_tmp_matcher, &eosio_record_matcher);
 
-   llvm::cerr << "Warning, this tool is deprecated.  Only use eosio-cpp in the future." << '\n';
+   llvm::errs() << "Warning, this tool is deprecated.  Only use eosio-cpp in the future." << '\n';
    int tool_run = -1;
    try {
       tool_run = tool.run(newFrontendActionFactory(&finder).get());
