--- a/tools/cc/eosio-cc.cpp.in
+++ b/tools/cc/eosio-cc.cpp.in
@@ -56,10 +56,10 @@ int main(int argc, const char **argv) {
       new_opts.insert(new_opts.begin(), "-o "+output);
       outputs.push_back(output);
       if (!eosio::cdt::environment::exec_subprogram("clang-7", new_opts)) {
-         //llvm::sys::fs::remove(tmp_file);
+         llvm::sys::fs::remove(tmp_file);
          return -1;
       }
-      //llvm::sys::fs::remove(tmp_file);
+      llvm::sys::fs::remove(tmp_file);
    } 
    // then link
    //
