--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -5,5 +5,6 @@ add_native_executable(name_tests name_tests.cpp)
 add_native_executable(system_tests system_tests.cpp)
 add_native_executable(rope_tests rope_tests.cpp)
 add_native_executable(print_tests print_tests.cpp)
+add_native_executable(varint_tests varint_tests.cpp)
 
 add_subdirectory(test_contracts)
