fix issue with ambigious calls to read_action_data and action_data_size

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,6 @@ add_test(name_tests ${CMAKE_BINARY_DIR}/tests/unit/name_tests)
 add_test(rope_tests ${CMAKE_BINARY_DIR}/tests/unit/rope_tests)
 add_test(print_tests ${CMAKE_BINARY_DIR}/tests/unit/print_tests)
 add_test(system_tests ${CMAKE_BINARY_DIR}/tests/unit/system_tests)
-if (eosio_FOUND)
+if (eosio_FOUND AND EOSIO_RUN_INTEGRATION_TESTS)
    add_test(integration_tests ${CMAKE_BINARY_DIR}/tests/integration/integration_tests)
 endif()
