--- a/tools/include/compiler_options.hpp.in
+++ b/tools/include/compiler_options.hpp.in
@@ -336,6 +336,7 @@ static void GetCompDefaults(std::vector<std::string>& copts) {
       copts.emplace_back("-m64");
 #endif
       copts.emplace_back("-mno-sse");
+      copts.emplace_back("-fno-builtin");
       if (!fasm_opt) {
          copts.emplace_back("-DEOSIO_NATIVE");
          copts.emplace_back("-DLP64");
