--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,14 @@
-set(unit_test_dir ${CMAKE_BINARY_DIR}/EosioWasmTests-prefix/src/EosioWasmTests-build)
+set( unit_test_dir ${CMAKE_BINARY_DIR}/EosioWasmTests-prefix/src/EosioWasmTests-build )
 
-add_test(asset_tests ${unit_test_dir}/asset_tests)
-add_test(name_tests ${unit_test_dir}/name_tests)
-add_test(symbol_tests ${unit_test_dir}/symbol_tests)
-add_test(system_tests ${unit_test_dir}/system_tests)
-add_test(time_tests ${unit_test_dir}/time_tests)
-add_test(varint_tests ${unit_test_dir}/varint_tests)
+add_test( asset_tests ${unit_test_dir}/asset_tests )
+add_test( binary_extension_tests ${unit_test_dir}/binary_extension_tests )
+add_test( crypto_tests ${unit_test_dir}/crypto_tests )
+add_test( datastream_tests ${unit_test_dir}/datastream_tests )
+add_test( fixed_bytes_tests ${unit_test_dir}/fixed_bytes_tests )
+add_test( name_tests ${unit_test_dir}/name_tests )
+add_test( rope_tests ${unit_test_dir}/rope_tests )
+add_test( serialize_tests ${unit_test_dir}/serialize_tests )
+add_test( symbol_tests ${unit_test_dir}/symbol_tests )
+add_test( system_tests ${unit_test_dir}/system_tests )
+add_test( time_tests ${unit_test_dir}/time_tests )
+add_test( varint_tests ${unit_test_dir}/varint_tests )
