added llp64 fixes and fixed sse issues

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ add_test( datastream_tests ${CMAKE_BINARY_DIR}/tests/unit/datastream_tests )
 add_test( fixed_bytes_tests ${CMAKE_BINARY_DIR}/tests/unit/fixed_bytes_tests )
 add_test( name_tests ${CMAKE_BINARY_DIR}/tests/unit/name_tests )
 add_test( rope_tests ${CMAKE_BINARY_DIR}/tests/unit/rope_tests )
+add_test( print_tests ${CMAKE_BINARY_DIR}/tests/unit/print_tests )
 add_test( serialize_tests ${CMAKE_BINARY_DIR}/tests/unit/serialize_tests )
 add_test( symbol_tests ${CMAKE_BINARY_DIR}/tests/unit/symbol_tests )
 add_test( system_tests ${CMAKE_BINARY_DIR}/tests/unit/system_tests )
