--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -11,7 +11,8 @@ add_native_executable( rope_tests rope_tests.cpp )
 add_native_executable( serialize_tests serialize_tests.cpp )
 add_native_executable( symbol_tests symbol_tests.cpp )
 add_native_executable( system_tests system_tests.cpp )
-add_native_executable(rope_tests rope_tests.cpp)
+add_native_executable( rope_tests rope_tests.cpp )
+add_native_executable( print_tests print_tests.cpp )
 add_native_executable( time_tests time_tests.cpp )
 add_native_executable( varint_tests varint_tests.cpp )
 
