fixes for wasm-ql

--- a/tools/include/compiler_options.hpp.in
+++ b/tools/include/compiler_options.hpp.in
@@ -775,10 +775,19 @@ static Options CreateOptions(bool add_defaults=true) {
 
       if (fquery_opt) {
          ldopts.emplace_back("--export-table");
+         ldopts.emplace_back("-other-model");
          ldopts.emplace_back("--only-export \"*:table\"");
-         // fill in other exports for "entry points"
-         //ldopts.emplace_back("--export ");
-         //ldopts.emplace_back("--only-export \":function\"");
+         ldopts.emplace_back("--only-export \"*:memory\"");
+         ldopts.emplace_back("-e initialize ");
+         ldopts.emplace_back("-export create_request ");
+         ldopts.emplace_back("-export decode_response ");
+         ldopts.emplace_back("-export describe_request ");
+         ldopts.emplace_back("-export describe_response ");
+         ldopts.emplace_back("--only-export \"initialize:function\"");
+         ldopts.emplace_back("--only-export \"create_request:function\"");
+         ldopts.emplace_back("--only-export \"decode_response:function\"");
+         ldopts.emplace_back("--only-export \"describe_request:function\"");
+         ldopts.emplace_back("--only-export \"describe_response:function\"");
       } else {
          ldopts.emplace_back("--only-export \"apply:function\"");
       }
