--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -16,17 +16,5 @@ add_native_executable( print_tests print_tests.cpp )
 add_native_executable( time_tests time_tests.cpp )
 add_native_executable( varint_tests varint_tests.cpp )
 
-add_dependencies( name_tests EosioTools )
-add_dependencies( binary_extension_tests EosioTools )
-add_dependencies( crypto_tests EosioTools )
-add_dependencies( datastream_tests EosioTools )
-add_dependencies( fixed_bytes_tests EosioTools )
-add_dependencies( name_tests EosioTools )
-add_dependencies( rope_tests EosioTools )
-add_dependencies( serialize_tests EosioTools )
-add_dependencies( symbol_tests EosioTools )
-add_dependencies( system_tests EosioTools )
-add_dependencies( time_tests EosioTools )
-add_dependencies( varint_tests EosioTools )
-
+target_compile_options( rope_tests PUBLIC -g )
 add_subdirectory(test_contracts)
