--- a/tools/include/compiler_options.hpp.in
+++ b/tools/include/compiler_options.hpp.in
@@ -146,6 +146,7 @@ static cl::opt<bool> g_opt(
       "g",
       cl::desc("debug build <ignored>"),
       cl::Hidden,
+      cl::ZeroOrMore,
       cl::cat(EosioCompilerToolCategory));
 static cl::opt<std::string> x_opt(
       "x",
@@ -336,6 +337,7 @@ struct Options {
    std::vector<std::string> ld_options;
    std::vector<std::string> abigen_options;
    std::vector<std::string> abigen_resources;
+   bool debug;
    bool native;
 };
 
@@ -430,6 +432,7 @@ static Options CreateOptions(bool add_defaults=true) {
    std::vector<std::string> ldopts;
    std::vector<std::string> agopts;
    bool link = true;
+   bool debug = false;
    std::string pp_dir;
    std::string abigen_output;
    std::string abigen_contract;
@@ -439,6 +442,7 @@ static Options CreateOptions(bool add_defaults=true) {
 #else
    bool abigen = abigen_opt;
    abigen_output = abigen_output_opt;
+   debug = g_opt;
 #endif
 
    if (add_defaults) {
@@ -768,5 +772,5 @@ static Options CreateOptions(bool add_defaults=true) {
    if ((use_rt_opt && !fnative_opt) || fquery_opt)
       ldopts.emplace_back("-lrt -lsf");
 #endif
-   return {output_fn, inputs, link, abigen, pp_dir, abigen_output, abigen_contract, copts, ldopts, agopts, agresources, fnative_opt};
+   return {output_fn, inputs, link, abigen, pp_dir, abigen_output, abigen_contract, copts, ldopts, agopts, agresources, debug, fnative_opt};
 }
