--- a/modules/EosioCDTMacros.cmake.in
+++ b/modules/EosioCDTMacros.cmake.in
@@ -38,7 +38,7 @@ macro (add_native_executable TARGET)
    target_compile_options( ${TARGET} PUBLIC -fnative )
    set_target_properties( ${TARGET} PROPERTIES LINK_FLAGS "-fnative" SUFFIX "" )
    get_target_property(BINOUTPUT ${TARGET} BINARY_DIR)
-   if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+   if (${CMAKE_BUILD_TYPE} STREQUAL "Debug" AND APPLE)
       target_compile_options( ${TARGET} PUBLIC -g )
       find_program ( name NAMES "dsymutil" )
       if ( name )
